Project EliteGame {
  database_type: 'PostgreSQL'
  note: '''
  # EliteGame BE
  '''
}

Enum user_status {
  ACTIVATED
  DISABLED
  ARCHIVED
  VERIFY_PHONE
}

Table users [note: 'user table'] {
  id int [pk, increment]
  first_name varchar [note: 'first name']
  last_name varchar [note: 'last name']
  user_name varchar [unique, note: 'userid']
  email varchar [not null]
  phone varchar
  password varchar [not null, note: 'password']
  location "jsonb" [note: 'country, city, state, zipcode, address1, address2']
  birthday date
  asset_id int
  status user_status
  provider user_provider
  role_id int [not null, note: 'role id']
  coupon  int
  created_at timestamp [default: `now()`]
  updated_at timestamp 
}

Enum role_short_code {
  GUEST
  USER
  TABLET
  ADMIN
  SUPER_ADMIN
}

Table roles [note: 'user role table'] {
  id int [pk, increment]
  name varchar
  short_code role_short_code
  permissions varchar [note: 'list of permissions for actions by role: ex) canUpdate, canDelete ']
  created_at timestamp [default: `now()`]
  updated_at timestamp 
}

Ref: roles.id < users.role_id

Enum asset_type {
  IMAGE
  PDF
  VIDEO
}

Table assets [note: 'Application assets'] {
  id int [pk, increment]
  name varchar
  desc varchar
  url varchar
  type asset_type
  created_at timestamp [default: `now()`]
  updated_at timestamp 
}

Ref: assets.id < users.asset_id